--- a/src/color-master/colormaster.csproj
+++ b/src/color-master/colormaster.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>colormaster.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="colormaster.ico" />
+  </ItemGroup>
 
 </Project>
