--- a/src/color-master/colormaster.csproj
+++ b/src/color-master/colormaster.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>colormaster.ico</ApplicationIcon>
+    <AssemblyName>Color Master</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
