--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/src/color-master/obj
-/src/color-master/bin
-/src/color-master/colormaster.csproj.user
+/src/colorr-master/obj
+/src/colorr-master/bin
+/src/colorr-master/colorr-master.csproj.user
 /src/.vs
-/src/color-master/Properties/PublishProfiles/*.user
+/src/colorr-master/Properties/PublishProfiles/*.user
