changes in namespaces and others

--- a/src/colorr-master/colorr-master.csproj
+++ b/src/colorr-master/colorr-master.csproj
@@ -8,6 +8,25 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>colorr-master.ico</ApplicationIcon>
     <AssemblyName>Colorr Master</AssemblyName>
+    <Copyright>@anytizer</Copyright>
+    <PackageProjectUrl>https://github.com/anytizer/colorr-master.cs</PackageProjectUrl>
+    <PackageIcon>Colorr Master.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/anytizer/colorr-master.cs</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <SignAssembly>False</SignAssembly>
+    <RootNamespace>$(MSBuildProjectName.Replace(" ", ""))</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\resources\Colorr Master.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
