--- a/src/colorr-master/colorr-master.csproj
+++ b/src/colorr-master/colorr-master.csproj
@@ -10,13 +10,79 @@
     <AssemblyName>Colorr Master</AssemblyName>
     <Copyright>@anytizer</Copyright>
     <PackageProjectUrl>https://github.com/anytizer/colorr-master.cs</PackageProjectUrl>
-    <PackageIcon>Colorr Master.png</PackageIcon>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>Colorr Master 128x128.png</PackageIcon>
     <RepositoryUrl>https://github.com/anytizer/colorr-master.cs</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <SignAssembly>False</SignAssembly>
+    <SignAssembly>True</SignAssembly>
     <RootNamespace>$(MSBuildProjectName.Replace("-", ""))</RootNamespace>
     <StartupObject>colorrmaster.Program</StartupObject>
+    <AssemblyOriginatorKeyFile>..\..\..\certificates\private.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>True</DelaySign>
+    <ErrorReport>none</ErrorReport>
+    <UserSecretsId>54f48800-401a-45e0-9ba4-4e599feeed4c</UserSecretsId>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackAsTool>False</PackAsTool>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+    <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageId>$(AssemblyName.replace(" ", ""))</PackageId>
+    <UseWPF>True</UseWPF>
+    <Product>$(AssemblyName.replace(" ", ""))</Product>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <Optimize>True</Optimize>
+    <FileAlignment>8192</FileAlignment>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+    <FileAlignment>8192</FileAlignment>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <DebugType>portable</DebugType>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\resources\Colorr Master 128x128.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
 
 </Project>
